[level 3] Title: 단어 변환, Time: 0.60 ms, Memory: 76.2 MB -BaekjoonHub